mb statusupdate + betterthan TT

--- a/i18n/de/docusaurus-plugin-content-docs/current/migrating/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/migrating/_category_.json
@@ -1,8 +1,8 @@
 {
 	"position": 4,
-	"label": "TomatenKuchen ist besser als...",
+	"label": "Vergleich mit & migrieren zu anderen Bots",
 	"link": {
 		"type": "generated-index",
-		"title": "TomatenKuchen ist besser als..."
+		"title": "TomatenKuchen ist besser als ..."
 	}
 }
