Counting fail lb + autothread en

--- a/i18n/de/docusaurus-plugin-content-docs/current/custombot/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/custombot/_category_.json
@@ -1,6 +1,6 @@
 {
 	"position": 1,
-	"label": "Custom Bot",
+	"label": "Custom-Bot",
 	"link": {
 		"type": "generated-index",
 		"title": "Eine Sammlung von Erklärungen für die TomatenKuchen Custom Bots (Custom Branding/White-Label)"
