custom bots en + QoL + 2 integrations triggers

--- a/i18n/de/docusaurus-plugin-content-docs/current/migrating/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/migrating/_category_.json
@@ -3,6 +3,6 @@
 	"label": "Vergleich mit & migrieren zu anderen Bots",
 	"link": {
 		"type": "generated-index",
-		"title": "TomatenKuchen ist besser als ..."
+		"title": "TomatenKuchen ist besser als …"
 	}
 }
