--- a/i18n/de/docusaurus-theme-classic/navbar.json
+++ b/i18n/de/docusaurus-theme-classic/navbar.json
@@ -6,5 +6,17 @@
   "logo.alt": {
     "message": "TomatenKuchen Logo",
     "description": "The alt text of navbar logo"
+  },
+  "item.label.Bot website": {
+    "message": "Bot-Website",
+    "description": "Navbar item with label Bot website"
+  },
+  "item.label.Invite": {
+    "message": "Bot einladen",
+    "description": "Navbar item with label Invite"
+  },
+  "item.label.Support server": {
+    "message": "Supportserver",
+    "description": "Navbar item with label Support server"
   }
 }
